# key-value-storage

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
storage/: main.cpp  result.hpp  types.hpp
storage/btree/: btree.cpp  btree_impl.cpp  btree_impl.hpp
storage/core/: btree_storage.cpp  btree_storage.hpp  storage.hpp
storage/disk/: file_reader.cpp  file_writer.cpp
storage/network/: command_facade.cpp  command_facade.hpp  connection.cpp  connection.hpp  connection.ipp  operation_type.hpp  request_dispatcher.cpp  request_dispatcher.hpp  request_facade.cpp  request_facade.hpp  response_facade.cpp  response_facade.hpp  server.cpp  server.hpp  types.hpp
storage/network/proto_models/: command.proto  request.proto  response.proto
storage/utils/: noncopyable.hpp
tests/: CMakeLists.txt  connect_to_server_test.cpp  connection_test.cpp  connection_test.py  read_greeting_test.cpp  send_message_test.cpp
